[package]
name = "code-ask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# error handling
anyhow = "1.0.75"
thiserror = "1.0.48"
tracing = "0.1.37"

# code search
regex = "1.5.4"
# git
git-version = "0.3.5"
gix = { git = "https://github.com/BloopAI/gitoxide", version="0.55.2", features = ["blocking-http-transport-reqwest-rust-tls-no-trust-dns", "pack-cache-lru-static"] }

# misc 
once_cell = "1.18.0"
smallvec = { version = "1.11.1", features = ["serde"]}